# narabi

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
.github/workflows/: release.yaml  test.yaml
examples/: pub.py  sub.py
narabi/: codec.py  publisher.py  pubsub.py  queue.py  topic.py
narabi/backends/: base.py  redis.py
tests/: backend_test.py  conftest.py  topic_test.py
